# fastmatmul

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
benchmarks/: CMakeLists.txt
tests/: CMakeLists.txt  commons.h
tests/algo/bidiagonal_decomposition/: stress_bidiagonal_decomposition.cpp  unit_bidiagonal_decomposition.cpp
tests/algo/hessenberg_decomposition/: stress_hessenberg_decomposition.cpp  unit_hessenberg_decomposition.cpp
tests/algo/qr_decomposition/: stress_qr_decomposition.cpp  unit_qr_decomposition.cpp
tests/algo/schur_decomporition/: stress_schur_decomposition.cpp  unit_schur_decomposition.cpp
tests/algo/svd_decomposition/: stress_svd_decomposition.cpp  unit_svd_decomposition.cpp
tests/bench/: CMakeLists.txt  bench_matrix.cpp
tests/matrix/matrix/: unit_matrix.cpp  unit_matrix_properties.cpp
tests/matrix/matrix_properties/: unit_matrix_properties.cpp
tests/matrix/matrix_view/: unit_matrix_view.cpp
tests/matrix/sparse_linear/: unit_sparse_linear.cpp
tests/matrix/util/: unit_utils.cpp
tests/test/: CMakeLists.txt  test_givens_qr.cpp  test_matrix.cpp  test_matrix_view.cpp  test_qr_decomposition.cpp  test_utils.cpp
tests/test/matrix/sparse_linear/: unit_sparse_linear.cpp
